# cfs-mm

fsw/for_build/: CMakeLists.txt  codewalk_doxy.in  detail_doxy.in  user_doxy.in
fsw/unit_test/: CMakeLists.txt  mm_utf_cmds.in  mm_utf_test.out  ut_mm_test_loadfromfile.c  ut_mm_test_pokes.c  utf_test_mm.c
